--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,10 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-    --color-primary-background: #222831;
+  --color-primary-background: #222831;
   --color-primary-foregound: #393E46;
   --color-primary-text: #EEEEEE;
+  --color-secondary-text: #222831; 
   
   --color-background: var(--background);
   --color-foreground: var(--foreground);
